Add DOM clickable elements that are user interactive.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,54 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="js/scripts.js"></script>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <title></title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-11 header">
+          <strong>Tic-Tac-Toe</strong>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 square square1">
 
+        </div>
+        <div class="col-sm-4 square square2">
+
+        </div>
+        <div class="col-sm-4 square square3">
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 square square4">
+
+        </div>
+        <div class="col-sm-4 square square5">
+
+        </div>
+        <div class="col-sm-4 square square6">
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 square square7">
+
+        </div>
+        <div class="col-sm-4 square square8">
+
+        </div>
+        <div class="col-sm-4 square square9">
+          
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-11 legal">
+          Copyright 2017 Ken Rutan, Jennifer Kinsey
+        </div>
+      </div>
+    </div>
   </body>
 </html>
-
