Add new single-player functionality.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="js/scripts.js"></script>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <title>Our TicTacToe</title>
   </head>
   <body>
     <div class="container">
@@ -17,39 +18,45 @@
           <strong>Tic-Tac-Toe</strong>
         </div>
       </div>
+      <div class="row players">
+        <h2 class="player">Player 1's Turn</h2>
+        <h2 class="player hidden">Player 2's Turn</h2>
+      </div>
       <div class="row">
-        <div class="col-sm-4 square square1">
+        <div class="col-sm-4 square square1" id="1">
 
         </div>
-        <div class="col-sm-4 square square2">
+        <div class="col-sm-4 square square2" id="2">
 
         </div>
-        <div class="col-sm-4 square square3">
+        <div class="col-sm-4 square square3" id="3">
 
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 square square4">
+        <div class="col-sm-4 square square4" id="4">
 
         </div>
-        <div class="col-sm-4 square square5">
+        <div class="col-sm-4 square square5" id="5">
 
         </div>
-        <div class="col-sm-4 square square6">
+        <div class="col-sm-4 square square6" id="6">
 
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 square square7">
+        <div class="col-sm-4 square square7" id="7">
 
         </div>
-        <div class="col-sm-4 square square8">
+        <div class="col-sm-4 square square8" id="8">
 
         </div>
-        <div class="col-sm-4 square square9">
-          
+        <div class="col-sm-4 square square9" id="9">
+
         </div>
       </div>
+
+
       <div class="row">
         <div class="col-sm-11 legal">
           Copyright 2017 Ken Rutan, Jennifer Kinsey
