Add the ability to the AI to pick a random square and go for it.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div class="row players">
         <h2 class="player">Player 1's Turn</h2>
         <h2 class="player hidden">Player 2's Turn</h2>
+        <button class="btn btn-danger">Reset</button>
+        <button class="btn btn-primary">AI Select</button>
       </div>
       <div class="row">
         <div class="col-sm-4 square square1" id="1">
