Add 80s theme to the program because awesomeness.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Our TicTacToe</title>
   </head>
   <body>
+
+    <div id="background">
+      <img src="background.jpg"/>
+    </div>
+
     <div class="container">
       <div class="congrats hidden">
         <img src="fireworks.jpg"/>
@@ -29,8 +34,8 @@
       </div>
       <div class="row">
         <div class="col-xs-11">
-          <button class="btn btn-danger">Reset</button>
-          <button class="btn btn-primary">Let the AI Select a Square</button>
+          <button class="btn btn-theme btn-reset">RESET</button>
+          <button class="btn btn-theme btn-ai">AI PICK SQUARE</button>
         </div>
       </div>
 
